# Network-Load-Balancer

./: CMakeLists.txt  Makefile  README.md  build.sh  clear.sh  closing_message.cpp  closing_message.h  config.json  config.txt  main.cpp  networkLoadBalancer.cpp  networkLoadBalancer.h  network_load_balancer.cpp  network_load_balancer.h  parsAddress.cpp  parsAddress.h  parsFreqOfUDP.cpp  parsFreqOfUDP.h  pars_address.cpp  pars_address.h  pars_freq_of_udp.cpp  pars_freq_of_udp.h
demo/: README.txt  client1  client2  client3  nlb  run.sh  source
src/: main.cpp  network_load_balancer.cpp  network_load_balancer.h  parser.cpp  parser.h
tests/: sender_recipient.cpp  sender_recipient.h  test_nlb.cpp
